# otto_os

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deploy.sh  install-linux.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/otto-brokers/: Cargo.toml
crates/otto-brokers/src/: decode.rs  http.rs  kafka.rs  lib.rs  metrics.rs  schema_registry.rs  service.rs  types.rs
crates/otto-brokers/tests/: kafka_e2e.rs
crates/otto-canvas/: Cargo.toml
crates/otto-canvas/src/: http.rs  lib.rs  types.rs
crates/otto-channels/: Cargo.toml
crates/otto-channels/src/: adapter.rs  bridge.rs  email.rs  http.rs  improve_notify.rs  lib.rs  manager.rs  mirror.rs  run_trigger.rs  seed.rs  slack.rs  swarm_trigger.rs  telegram.rs  transcript.rs  webhook.rs  workflow_trigger.rs
crates/otto-connections/: Cargo.toml
crates/otto-connections/src/: builders.rs  conn_import.rs  http.rs  keyperms.rs  lib.rs  service.rs
crates/otto-connections/tests/: isolation.rs
crates/otto-context/: Cargo.toml
crates/otto-context/src/: config.rs  http.rs  lib.rs  library.rs  materialize.rs  merge.rs  provisioner.rs  repomap.rs  user_skills.rs
crates/otto-core/: Cargo.toml
crates/otto-core/src/: api.rs  auth.rs  domain.rs  error.rs  eval_score.rs  event.rs  expr.rs  finding.rs  hooks.rs  id.rs  lib.rs  proof.rs  provider.rs  redact.rs  run.rs  secrets.rs  workflows.rs  workref.rs
crates/otto-dbviewer/: Cargo.toml
crates/otto-dbviewer/src/: config.rs  driver.rs  export.rs  http.rs  import.rs  lib.rs  nl.rs  registry.rs  service.rs  tls.rs  tunnel.rs  types.rs
crates/otto-dbviewer/tests/: clickhouse_e2e.rs  mcp_query.rs  mongodb_e2e.rs  mysql_e2e.rs  redis_e2e.rs
crates/otto-git/: Cargo.toml
crates/otto-git/src/: http.rs  lib.rs  local.rs  parse.rs  types.rs
crates/otto-improve/: Cargo.toml
crates/otto-improve/assets/: workspace-self-reflection.md
crates/otto-improve/src/: classify.rs  config.rs  digest.rs  engine.rs  http.rs  lib.rs  live.rs  pathsafe.rs  producer.rs  prompt.rs  proposal.rs  scheduler.rs
crates/otto-issues/: Cargo.toml
crates/otto-issues/src/: adf.rs  confluence.rs  http.rs  jira.rs  lib.rs
crates/otto-mcp/: Cargo.toml
crates/otto-mcp/src/: client.rs  http.rs  lib.rs  policy.rs  risk.rs  service.rs  types.rs
crates/otto-mcp/tests/: pipeline_e2e.rs
crates/otto-memory/: Cargo.toml
crates/otto-memory/examples/: go_admission_login.rs
crates/otto-memory/src/: backends.rs  code_scan.rs  embed.rs  git_context.rs  governance.rs  http.rs  index.rs  ingest.rs  lib.rs  remote.rs  retrieve.rs  service.rs  test_map.rs  test_support.rs  types.rs  vault.rs
crates/otto-memory/tests/: code_intel.rs  collections_graph.rs  embedders.rs  needle.rs  remote_share.rs  sharing.rs  vault.rs
crates/otto-netguard/: Cargo.toml
crates/otto-netguard/src/: lib.rs
crates/otto-orchestrator/: Cargo.toml
crates/otto-orchestrator/src/: claude_pty.rs  e2e_stub.rs  lib.rs  parse.rs
crates/otto-product/: Cargo.toml
crates/otto-product/src/: extract.rs  http.rs  lib.rs  memory_facade.rs  service.rs  skills.rs  types.rs
crates/otto-product/tests/: memory_ingest.rs
crates/otto-rbac/: Cargo.toml
crates/otto-rbac/src/: cache.rs  lib.rs  passwords.rs  tokens.rs
crates/otto-sandbox/: Cargo.toml
crates/otto-sandbox/src/: lib.rs
crates/otto-sandbox/tests/: seatbelt_exec.rs
crates/otto-server/: Cargo.toml
crates/otto-server/src/: agent_run.rs  agent_session.rs  api_helpers.rs  auth.rs  cadence.rs  canvas_assist.rs  cli_update.rs  context_packet.rs  db_assist.rs  db_drafter.rs  embedder.rs  error.rs  eval_lab_routes.rs  eval_score.rs  feature_guard.rs  finding_agent.rs  finding_context.rs  goal_loop.rs  goal_loop_parse.rs  goal_loop_workspace.rs  improve_channels.rs  insights.rs  lib.rs  login_throttle.rs  mcp_capabilities.rs  mcp_http.rs  mcp_outward.rs  memory_gov.rs  mockup_assist.rs  modules.rs  monitor.rs  plugins.rs  policy.rs  product_chat.rs  product_media.rs  product_refine.rs  product_run.rs  product_swarm.rs  product_watcher.rs  proof.rs  (+28 more)
crates/otto-server/tests/: activity_isolation.rs  admin_sessions.rs  auth_security.rs  email_sender_storage.rs  grants_api.rs  impersonation.rs  policy_coverage.rs  rbac_matrix.rs  route_inventory.rs  share_api.rs  share_otp.rs  share_scope_guard.rs
crates/otto-sessions/: Cargo.toml
crates/otto-sessions/src/: http.rs  lib.rs  lifecycle.rs  manager.rs  mcp.rs  names.rs  prompt_guard.rs  providers.rs  share_throttle.rs  trust.rs  ws.rs
crates/otto-sessions/tests/: broadcast_e2e.rs  folder_trust_overcome.rs  isolation.rs
crates/otto-skills/: Cargo.toml  SKILL_AUTHORING.md
crates/otto-skills/src/: http.rs  lib.rs
crates/otto-state/: Cargo.toml  build.rs
crates/otto-state/migrations/: 0001_init.sql  0002_session_archived.sql  0003_issue_accounts.sql  0004_git_account_namespace.sql  0005_workspace_integrations.sql  0006_pr_reviews.sql  0007_review_agents.sql  0008_connection_sections.sql  0009_self_improvement.sql  0010_integration_preferred_cli.sql  0011_notifications.sql  0012_account_token_expiry.sql  0013_improvement_trigger_live.sql  0014_api_client.sql  0015_api_automations.sql  0016_agent_activity.sql  0017_skill_evals.sql  0018_agent_trail_level.sql  0019_skill_eval_config.sql  0020_workflows.sql  0021_db_explorer.sql  0022_connection_section_scope.sql  0023_global_connections.sql  0024_product.sql  0025_product_agent_session.sql  0026_product_transcripts.sql  0027_product_story_tags.sql  0028_product_agent_resume.sql  0029_agent_swarm.sql  0030_api_tokens.sql  0031_notifications_user.sql  0032_connection_environment.sql  0032_swarm_budget.sql  0033_audit_log.sql  0034_swarm_budgets.sql  0035_swarm_project_story_link.sql  0036_mcp_servers.sql  0037_swarm_project_story_unique.sql  0038_memory.sql  0039_memory_sharing.sql  (+51 more)
crates/otto-state/src/: activity.rs  api_client.rs  audit.rs  broker_audit.rs  broker_cluster_sections.rs  broker_clusters.rs  broker_ops.rs  (+48 more)
crates/otto-swarm/: Cargo.toml
crates/otto-usage/: Cargo.toml
crates/otto-workgraph/: Cargo.toml
crates/ottod/: Cargo.toml
(+826 files in other folders)
