[package]
name = "otto-brokers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-netguard = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rdkafka = { workspace = true }
apache-avro = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
