[package]
name = "otto-brokers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-netguard = { workspace = true }
otto-ssh = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rdkafka = { workspace = true }
apache-avro = { workspace = true }
# SSH-tunnel Kafka proxy: SOCKS5 dial to brokers + broker-side TLS termination.
tokio-socks = "0.5"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pki-types = "1"
webpki-roots = "1"

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
