[package]
name = "otto-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
otto-sessions.workspace = true
otto-orchestrator.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
futures-util.workspace = true
tokio-tungstenite.workspace = true
anyhow = { workspace = true }
