[package]
name = "otto-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
otto-sessions.workspace = true
otto-orchestrator.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
futures-util.workspace = true
tokio-tungstenite.workspace = true
anyhow = { workspace = true }
# Email sender (Gmail App Password → SMTP for the email-OTP share gate).
# tokio1-rustls-tls keeps us on the workspace's rustls stack (no native-tls /
# OpenSSL); STARTTLS to smtp.gmail.com:587 is the AsyncSmtpTransport default.
# default-features = false drops lettre's default native-tls feature.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "pool",
] }
