[package]
name = "otto-connections"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-pty = { workspace = true }
otto-ssh = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
sqlx = { workspace = true }
