[package]
name = "otto-dbviewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-ssh = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["mysql", "tls-rustls", "bigdecimal", "time", "uuid"] }
redis = { version = "1.2.3", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
mongodb = { version = "3.7.0", features = ["socks5-proxy"] }
sqlparser = "0.62.0"
clickhouse = { version = "0.15.1", features = ["rustls-tls"] }
klickhouse = { version = "0.15.3", features = ["tls"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pki-types = "1"
webpki-roots = "1"

[dev-dependencies]
serde_json = { workspace = true }
