[package]
name = "otto-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tempfile.workspace = true
futures-util.workspace = true
urlencoding = "2.1"

[dev-dependencies]
sqlx.workspace = true
