[package]
name = "otto-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
axum.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
ulid.workspace = true
chrono.workspace = true
tower = { version = "0.5", features = ["util"] }
