[package]
name = "otto-netguard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# URL parsing (reqwest::Url) + the redirect policy type are the only surface we
# need; tokio supplies the async DNS lookup for the pre-flight check.
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
