[package]
name = "otto-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Embed ui/dist into the binary and serve it as the SPA. Off by default so the
# server builds without the UI artifact; without it `/` serves a placeholder.
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
otto-rbac.workspace = true
otto-netguard.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tracing.workspace = true
dirs.workspace = true
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
otto-sessions.workspace = true
otto-connections.workspace = true
otto-ssh.workspace = true
otto-dbviewer.workspace = true
otto-brokers.workspace = true
otto-mcp.workspace = true
otto-orchestrator.workspace = true
otto-git.workspace = true
otto-issues.workspace = true
otto-channels.workspace = true
otto-improve.workspace = true
otto-context.workspace = true
otto-skills.workspace = true
otto-usage.workspace = true
otto-product.workspace = true
otto-canvas.workspace = true
otto-swarm.workspace = true
otto-memory.workspace = true
otto-pty.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
base64.workspace = true
tokio-tungstenite.workspace = true
protox.workspace = true
prost.workspace = true
prost-reflect.workspace = true
prost-types.workspace = true
tonic.workspace = true
tempfile.workspace = true
uuid.workspace = true
rand.workspace = true
reqwest_cookie_store.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
# RBAC guard integration tests drive a minimal router via tower's oneshot and
# read the response body. Pinned to the versions axum 0.8 already resolves.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
