[package]
name = "otto-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shell-words.workspace = true
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-pty = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
uuid.workspace = true
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
