[package]
name = "otto-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shell-words.workspace = true
otto-core = { workspace = true }
otto-state = { workspace = true }
otto-pty = { workspace = true }
otto-sandbox = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
uuid.workspace = true
chrono = { workspace = true }
# Minting the per-session read-only token for the first-party MCP tool server
# (Task B2b): the `otto` MCP entry, when the workspace opts in, carries a scoped
# token the tools authorize with. Reuses the existing auth-token system.
otto-rbac = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
# Session-isolation tests drive the real REST router via tower's oneshot, read
# the response body, and build a `RoleChecker` from a migrated SQLite pool.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
