[package]
name = "otto-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-context = { workspace = true }
otto-core = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tempfile = { workspace = true }
