[package]
name = "otto-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
