[package]
name = "otto-usage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otto-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
reqwest.workspace = true
sysinfo = "0.33"

[dev-dependencies]
tempfile.workspace = true
