[package]
name = "ottod"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Forwarded to otto-server to bake ui/dist into the binary.
embed-ui = ["otto-server/embed-ui"]

[dependencies]
otto-core.workspace = true
otto-state.workspace = true
otto-rbac.workspace = true
otto-keychain.workspace = true
otto-server.workspace = true
tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
otto-sessions.workspace = true
otto-connections.workspace = true
otto-dbviewer.workspace = true
otto-brokers.workspace = true
otto-mcp.workspace = true
otto-orchestrator.workspace = true
otto-channels.workspace = true
otto-improve.workspace = true
otto-context.workspace = true
otto-skills.workspace = true
otto-usage.workspace = true
otto-product.workspace = true
otto-swarm.workspace = true
otto-workgraph.workspace = true
otto-memory.workspace = true
# `ottod mcp-tools` (Task B2b): the first-party MCP tool server calls back into
# the running daemon over loopback HTTP with a per-session read-only token.
reqwest.workspace = true

# TLS for the optional 0.0.0.0 network listener (S3). rustls-only to match the
# rest of the tree (reqwest uses rustls). `tls-rustls-no-provider` so we install
# the crypto provider explicitly (both ring + aws-lc are compiled in this tree,
# so the default is ambiguous and would panic). `rcgen` mints a persisted
# self-signed cert on first use so the listener works out of the box.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = "0.10"
