[package]
name = "otto-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Standalone workspace: the Tauri app builds separately from the daemon crates.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
dirs = "6"
